--- a/social-media-api/src/main/resources/application.properties
+++ b/social-media-api/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 jwt.secret=2Bxu6UrWZbY6Vt7JfX5Q9dRd0pNQaMzk
 jwt.expiration.ms=3600000
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# application.properties
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+server.tomcat.max-http-header-size=65536
+server.tomcat.max-swallow-size=10MB
+
