fixed follow / unfollow

--- a/social-media-api/src/main/resources/application.properties
+++ b/social-media-api/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 spring.application.name=social-media-api
 
 spring.datasource.url=jdbc:mysql://localhost:3306/CIC_SocialMedia
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=murad123654!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 jwt.secret=2Bxu6UrWZbY6Vt7JfX5Q9dRd0pNQaMzk
 jwt.expiration.ms=3600000
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-# application.properties
+# File upload settings
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# Tomcat settings
 server.tomcat.max-http-header-size=65536
 server.tomcat.max-swallow-size=10MB
-
