user profile picture added and works

--- a/social-media-api/src/main/resources/application.properties
+++ b/social-media-api/src/main/resources/application.properties
@@ -5,11 +5,18 @@ spring.datasource.username=root
 spring.datasource.password=murad123654!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.data.jpa.repositories.enabled=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 jwt.secret=2Bxu6UrWZbY6Vt7JfX5Q9dRd0pNQaMzk
 jwt.expiration.ms=3600000
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 # File upload settings
 spring.servlet.multipart.max-file-size=50MB
