--- a/social-media-api/pom.xml
+++ b/social-media-api/pom.xml
@@ -81,6 +81,14 @@
 			<artifactId>jackson-datatype-hibernate5</artifactId>
 			<version>2.17.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId> <!-- Optional, for frontend rendering -->
+		</dependency>
 	</dependencies>
 
 	<build>
