--- a/social-media-front/package.json
+++ b/social-media-front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,11 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-window": "^1.8.10",
+    "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
